log
Thu 09 Mar 2023 03:40:37 PM UTC: 
 tests:  0|7
total_score: 0/70
df08056
Thu 09 Mar 2023 03:50:35 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ebdecda
Thu 09 Mar 2023 03:56:46 PM UTC: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:28:9: error: ‘max’ redeclared as different kind of symbol
   28 |     int max = 0;
      |         ^~~
exercises.c:27:42: note: previous definition of ‘max’ was here
   27 | void arrayMaxMin(int *array, int n, int *max, int *min) {
      |                                     ~~~~~^~~
exercises.c:29:9: error: ‘min’ redeclared as different kind of symbol
   29 |     int min = array[0];
      |         ^~~
exercises.c:27:52: note: previous definition of ‘min’ was here
   27 | void arrayMaxMin(int *array, int n, int *max, int *min) {
      |                                               ~~~~~^~~
exercises.c:32:5: error: expected expression before ‘}’ token
   32 |     }
      |     ^
exercises.c:29:9: error: unused variable ‘min’ [-Werror=unused-variable]
   29 |     int min = array[0];
      |         ^~~
exercises.c:28:9: error: unused variable ‘max’ [-Werror=unused-variable]
   28 |     int max = 0;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
5f92420
Thu 09 Mar 2023 03:57:16 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
bd4cc74
Thu 09 Mar 2023 04:03:04 PM UTC: 
 exercises.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:37:8: error: ‘mayor’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   37 |   *max = mayor;
      |   ~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1ed6ff9
Thu 09 Mar 2023 04:03:43 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
042596c
Thu 09 Mar 2023 04:15:06 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:60:3: error: implicit declaration of function ‘strcopy’; did you mean ‘strcpy’? [-Werror=implicit-function-declaration]
   60 |   strcopy(p->nombre, nombre);
      |   ^~~~~~~
      |   strcpy
cc1: all warnings being treated as errors
Compilation failed
c6b2223
Thu 09 Mar 2023 04:15:18 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
04bcfbd
Thu 09 Mar 2023 04:23:44 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:83:10: error: ‘(Vector *)&arreglo’ is a pointer; did you mean to use ‘->’?
   83 |   arreglo.capacidad = n;
      |          ^
      |          ->
exercises.c:84:3: error: ‘arrelog’ undeclared (first use in this function); did you mean ‘arreglo’?
   84 |   arrelog->datos = calloc(n, sizeof(int));
      |   ^~~~~~~
      |   arreglo
exercises.c:84:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:86:10: error: function returns address of local variable [-Werror=return-local-addr]
   86 |   return arreglo;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5201de4
Thu 09 Mar 2023 04:24:18 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:10: error: function returns address of local variable [-Werror=return-local-addr]
   86 |   return arreglo;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fb5837a
Thu 09 Mar 2023 04:24:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:10: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   86 |   return *arreglo;
      |          ^~~~~~~~
exercises.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5d64061
Thu 09 Mar 2023 04:25:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:10: error: function returns address of local variable [-Werror=return-local-addr]
   86 |   return arreglo;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f45e138
Thu 09 Mar 2023 04:29:09 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
cd1b7c9
Thu 09 Mar 2023 08:03:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:82:22: error: too many arguments to function ‘malloc’
   82 |   Vector * arreglo = malloc(n, sizeof(Vector));
      |                      ^~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:539:14: note: declared here
  539 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
Compilation failed
15423c5
Thu 09 Mar 2023 08:04:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
c8b8db7
Thu 09 Mar 2023 08:06:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:98:12: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   98 |     v[i] = valor;
      |            ^~~~~
Compilation failed
5a98c22
Thu 09 Mar 2023 08:07:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:98:9: error: invalid type argument of ‘->’ (have ‘Vector’)
   98 |     v[i]->datos = valor;
      |         ^~
Compilation failed
5b5095c
Thu 09 Mar 2023 08:07:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:98:16: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   98 |     v[i].datos = valor;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
f02be6b
Thu 09 Mar 2023 08:10:19 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 40/70
9038f18
Thu 09 Mar 2023 08:12:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
56d931c
Thu 09 Mar 2023 08:14:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
144fe14
Thu 09 Mar 2023 08:18:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
44cc93c
Thu 09 Mar 2023 08:20:27 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 40/70
6a9f08b
Thu 09 Mar 2023 08:20:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:88:17: error: expected ‘;’ before ‘}’ token
   88 |   return arreglo
      |                 ^
      |                 ;
   89 | }
      | ~                
Compilation failed
eafdf37
Thu 09 Mar 2023 08:21:07 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 40/70
def6ea4
Thu 09 Mar 2023 08:21:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:97:6: error: ‘v’ is a pointer; did you mean to use ‘->’?
   97 |     v.datos[i] = valor;
      |      ^
      |      ->
Compilation failed
98d9bfd
Thu 09 Mar 2023 08:22:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
777915d
Thu 09 Mar 2023 08:23:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
cc0a075
